--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('https://pokeponggithubio-production.up.railway.app/users/login', {
+                const response = await fetch('https://pokeponggithubio-production.up.railway.app:8080/users/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -183,7 +183,7 @@
             const email = document.getElementById('registerEmail').value;
             
             try {
-                const response = await fetch('https://pokeponggithubio-production.up.railway.app/users/register', {
+                const response = await fetch('https://pokeponggithubio-production.up.railway.app:8080/users/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -227,7 +227,7 @@
             if (!token) return;
 
             try {
-                const response = await fetch('https://pokeponggithubio-production.up.railway.app/users/profile', {
+                const response = await fetch('https://pokeponggithubio-production.up.railway.app:8080/users/profile', {
                     method: 'GET',
                     headers: {
                         'Authorization': `Bearer ${token}`
@@ -255,7 +255,7 @@
             const newEmail = document.getElementById('newEmail').value;
 
             try {
-                const response = await fetch('https://pokeponggithubio-production.up.railway.app/users/updateProfile', {
+                const response = await fetch('https://pokeponggithubio-production.up.railway.app:8080/users/updateProfile', {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
